# llm-report-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  infra.yml  lint.yml
docs/: adding_new_client.md  architecture.md  email_configuration.md  running_locally.md
prompts/client-c/: reporter.md
prompts/default/: reporter.md  trends.md  verifier.md
queries/: raw_table.sql
queries/client-b-demo/: media_by_channel.sql  sales_daily.sql
queries/client-c/: sales_daily.sql
src/: bigquery_client.py  config.py  data_aggregator.py  email_sender.py  gcs_client.py  history_manager.py  llm_client.py  main.py  report_builder.py  secret_manager.py
terraform/: main.tf  outputs.tf  pipeline.tf  variables.tf
terraform/clients/: _template.tf  client_a_demo.tf  client_a_dev.tf  client_b.tf  client_c.tf  variables.tf
terraform/modules/client/: main.tf  outputs.tf  variables.tf
tests/: connectivity_check.py  e2e_check.py  e2e_preview.py  llm_check.py  pdf_check.py  preview_report.py  preview_trends.py  test_bigquery_client.py  test_llm_client.py  test_report_builder.py
