[project]
name = "llm-report-pipeline"
version = "0.1.0"
description = "Automated marketing report pipeline: per-client isolated LLM analysis over BigQuery data, delivering PDF reports via email."
requires-python = ">=3.13"

dependencies = [
    "google-cloud-bigquery",
    "db-dtypes",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-genai",
    "pandas",
    "sendgrid",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "pytest", # For the future
    "flake8", # This can be already added
]

[tool.pytest.ini_options] # For the future
pythonpath = ["."]

[tool.uv]
package = false
